test/param/config/ambiguousConfig.good
ambiguousConfig.chpl:5: warning: This file-scope code is outside of any explicit module declarations (e.g., module M), so an implicit module named 'ambiguousConfig' is being introduced to contain the file's contents.
ambiguousConfig.chpl:6: error: ambiguous config name (PV)
ambiguousConfig.chpl:3: note: also defined here
ambiguousConfig.chpl:3: note: (disambiguate using -s<modulename>.PV...)
